--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,12 +1,7 @@
-$text-color: #0d99ff;
-$background-color: #085085;
-$button-color: #0b3e62;
-$button-color-warning: #ffa629;
-$cart-background-color: #bde3ff;
 
 :root {
   /* default value */
-  --text-color: #0d99ff;
+  --text-color: #fff;
   --text-second-color: #fff;
   --text-third-color: #000;
   --background-color: #085085;
