better colors, bigger modal,  fix category view, editable product component

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -9,12 +9,12 @@
   --button-color-warning-darker: #ff9603;
   --button-warning-text-color: #000;
   //products
-  --product-color: #0B3E62;
-  --product-color-darker:#3B4E65;
-  --product-text-color: #fff;
+  --product-color: #BDE3FF;
+  --product-color-darker:#8acdff;
+  --product-text-color: #000;
  //cart
   --cart-first-background-color:#fff;
-  --cart-second-background-color:#bde3ff;
+  --cart-second-background-color:#BDE3FF;
   --cart-second-background-color-darker: #8acdff;
   --cart-border-color:#ccc;
 
